@@ -3300,17 +3300,13 @@ rb_w32_free_environ(char **env)
     free(env);
 }
 
+#undef getpid
 pid_t
 rb_w32_getpid(void)
 {
     pid_t pid;
 
-#ifndef __BORLANDC__
-    pid = _getpid();
-#else
-#undef getpid
     pid = getpid();
-#endif
 
     if (IsWin95()) pid = -pid;
 
